
\name{NEWS}
\title{NEWS file for the cotram package}

\section{Changes in Version 0.2-0 (2020-03-30)}{
  \itemize{
    \item{Paper on count transformation models is now available in MEE; DOI added.}
    \item{Update vignette.}
  }
}

\section{Changes in Version 0.1-1 (2019-10-02)}{
  \itemize{
    \item{Update notation in package vignette.}
  }
}


\section{Changes in Version 0.1-0 (2019-08-19)}{
  \itemize{
    \item{Version 0.1-0 published on CRAN.}
  }
}
